# chart-genie

./: README.md  pyproject.toml
chart_genie/: __init__.py  chart_config.py  cli.py  data_loader.py  llm_client.py  prompts.py  renderer.py
chart_genie/templates/: chart.html.j2
tests/: __init__.py  test_chart_config.py  test_data_loader.py  test_llm_client.py  test_renderer.py
tests/fixtures/: sales.csv  temperatures.json
